preventing for too long names crashing UI

--- a/klient/scss/main.scss
+++ b/klient/scss/main.scss
@@ -462,7 +462,8 @@ body {
     .room {
         background: url('../images/icons/png/room_small.png') no-repeat 10px center; 
         vertical-align:top;
-        padding:5px 35px;
+        width:165px;
+        padding:5px 0 5px 35px;
         font-size:13px;
         cursor:pointer;
         @include user-select(none);
@@ -471,6 +472,12 @@ body {
         &.active {
             background-color: #436483;
             @include box-shadow(inset 0 0 10px #293d50);
+        }
+        .name {
+            @include inline-block;
+            width: 135px;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
     .room:hover {
@@ -529,7 +536,8 @@ body {
     .user {
         background: url('../images/icons/png/silhouette_small.png') no-repeat 10px center; 
         vertical-align:top;
-        padding:5px 35px;
+        padding:5px 0 5px 35px;
+        width:165px;
         font-size:13px;
         cursor:pointer;
         @include user-select(none);
@@ -541,6 +549,12 @@ body {
         }
         &.me {
             cursor: default;
+        }
+        .name {
+            @include inline-block;
+            width: 135px;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
     }
     .user.fox {
